Close-to-final commit